--- a/dotfiles/sway/config
+++ b/dotfiles/sway/config
@@ -6,6 +6,9 @@ input * xkb_layout "us"
 #input * xkb_variant "colemak,,typewriter"
 #input * xkb_options "grp:win_space_toggle"
 input "MANUFACTURER1 Keyboard" xkb_model "pc101"
+input "type:keyboard" {
+    xkb_options caps:escape
+}
 
 #output HDMI-A-1 disable
 output 'Unknown HTC-VIVE 0x00000000' disable
